--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="row g-4">
                     <div class="col-md-4">
                         <div class="card h-100" style="width: 22rem;">
-                            <img src="images/Movie.png" class="card-img-top" alt="movie"
+                            <img src="images/movie.png" class="card-img-top" alt="movie"
                                 style="height: 200px; object-fit: cover; width: 100%;">
                             <div class="card-body bg-dark text-white" style="height: auto; min-height: 300px;">
                                 <h5 class="card-title"
@@ -336,7 +336,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100" style="width: 22rem;">
-                            <img src="images/car.jpg" class="card-img-top" alt="movie"
+                            <img src="images/skillpath.png" class="card-img-top" alt="movie"
                                 style="height: 200px; object-fit: cover; width: 100%;">
                             <div class="card-body bg-dark text-white" style="height: auto; min-height: 300px;">
                                 <h5 class="card-title"
@@ -384,7 +384,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card h-100" style="width: 22rem;">
-                            <img src="images/subway.jpg" class="card-img-top" alt="movie"
+                            <img src="images/subway.png" class="card-img-top" alt="movie"
                                 style="height: 200px; object-fit: cover; width: 100%;">
                             <div class="card-body bg-dark text-white" style="height: auto; min-height: 300px;">
                                 <h5 class="card-title"
