--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     <!-- footer  -->
     <footer class="text-center py-3 bg-dark text-white">
         <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-            <span class="mb-2 mb-md-0">Artificial Intelligence Engineer</span>
+<!--             <span class="mb-2 mb-md-0">Artificial Intelligence Engineer</span> -->
             <span class="mx-auto mb-2 mb-md-0">&copy;2025 Harsh Bhogal | All rights reserved.</span>
             <span class="d-flex gap-3">
                 <a href="https://github.com/your-github-username" target="_blank" class="text-white fs-4 footer-icon"
