--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 <!--             <span class="mb-2 mb-md-0">Artificial Intelligence Engineer</span> -->
             <span class="mx-auto mb-2 mb-md-0">&copy;2025 Harsh Bhogal | All rights reserved.</span>
             <span class="d-flex gap-3">
-                <a href="https://github.com/your-github-username" target="_blank" class="text-white fs-4 footer-icon"
+                <a href="https://github.com/Harsh456B" target="_blank" class="text-white fs-4 footer-icon"
                     aria-label="GitHub">
                     <i class="fa-brands fa-github"></i>
                 </a>
