--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
                                         class="resume-iframe"></iframe>
                                     <div class="resume-overlay d-flex flex-column justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100"
                                         style="background: rgba(0,0,0,0.5); opacity:0; transition: opacity 0.3s;">
-                                        <a href="images/autoCVmkr_CV_Template.pdf" class="btn btn-secondary btn-lg mb-2"
+                                        <a href="images/Resume 2025.pdf" class="btn btn-secondary btn-lg mb-2"
                                             download>
                                             <i class="fa-solid fa-download"></i> Download
                                         </a>
