--- a/index.html
+++ b/index.html
@@ -530,11 +530,11 @@
                                             download>
                                             <i class="fa-solid fa-download"></i> Download
                                         </a>
-                                        <a href="images/autoCVmkr_CV_Template.pdf" class="btn btn-secondary btn-lg mb-2"
+                                        <a href="images/Resume 2025.pdf" class="btn btn-secondary btn-lg mb-2"
                                             download>
                                             <i class="fa-solid fa-download"></i> Download
                                         </a>
-                                        <a href="images/autoCVmkr_CV_Template.pdf" class="btn btn-outline-light btn-lg"
+                                        <a href="images/Resume 2025.pdf" class="btn btn-outline-light btn-lg"
                                             target="_blank">
                                             <i class="fa-solid fa-eye"></i> View Fullscreen
                                         </a>
@@ -543,12 +543,12 @@
                             </div>
                         </div>
                         <div class="mb-3">
-                            <a href="images/autoCVmkr_CV_Template.pdf" class="btn btn-primary w-100" download>
+                            <a href="images/Resume 2025.pdf" class="btn btn-primary w-100" download>
                                 <i class="fa-solid fa-download"></i> Download Resume
                             </a>
                         </div>
                         <div class="mb-3">
-                            <a href="images/autoCVmkr_CV_Template.pdf" class="btn btn-outline-primary w-100"
+                            <a href="images/Resume 2025.pdf" class="btn btn-outline-primary w-100"
                                 target="_blank">
                                 <i class="fa-solid fa-eye"></i> View Fullscreen
                             </a>
