--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                         <div class="card shadow-lg border-0 mb-4 position-relative overflow-hidden resume-card">
                             <div class="card-body p-0">
                                 <div class="resume-preview-container position-relative">
-                                    <iframe src="images/autoCVmkr_CV_Template.pdf" allowfullscreen
+                                    <iframe src="images/Resume 2025.pdf" allowfullscreen
                                         style="border-radius: 8px; width:100%; height:400px; border:none; transition: box-shadow 0.3s;"
                                         class="resume-iframe"></iframe>
                                     <div class="resume-overlay d-flex flex-column justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100"
