--- a/index.html
+++ b/index.html
@@ -297,6 +297,41 @@
                             <div class="card-body bg-dark text-white" style="height: auto; min-height: 300px;">
                                 <h5 class="card-title"
                                     style="font-family: 'Poppins', sans-serif; font-weight: 300; letter-spacing: 0.5px; line-height: 1.6; font-size: 0.9rem;">
+
+                                    AgroGPT is an advanced AI-based system designed to support farmers in making
+                                    intelligent, data-driven agricultural decisions. It integrates seven core modules
+                                    including crop recommendation, fertilizer suggestion, soil health analysis,
+                                    weather-smart planning, pest/disease alerts, crop yield prediction, and market price
+                                    forecasting.
+
+                                    Trained on over 2 lakh synthetic records per module, AgroGPT delivers highly
+                                    accurate predictions (97%+ across models) using supervised machine learning
+                                    algorithms like XGBoost, LightGBM, and Scikit-learn. The system features a
+                                    Django-based web dashboard with login/logout and settings functionality, as well as
+                                    a CLI chatbot assistant for offline or low-resource environments.
+
+            
+                                </h5>
+                                <div class="d-flex gap-2 mt-3">
+                                    <a href="https://agrogpt-ai-powered-smart-farming.onrender.com/"
+                                        class="btn btn-outline-warning btn-sm" target="_blank">
+                                        <i class="fa-solid fa-globe me-2"></i>Live Demo
+                                    </a>
+                                    <a href="https://github.com/Harsh456B/AgroGPT-AI-Powered-Smart-Farming-Decision-Assistant"
+                                        class="btn btn-outline-info btn-sm" target="_blank">
+                                        <i class="fa-brands fa-github me-2"></i>Source Code
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card h-100" style="width: 22rem;">
+                            <img src="images/movie.png" class="card-img-top" alt="movie"
+                                style="height: 200px; object-fit: cover; width: 100%;">
+                            <div class="card-body bg-dark text-white" style="height: auto; min-height: 300px;">
+                                <h5 class="card-title"
+                                    style="font-family: 'Poppins', sans-serif; font-weight: 300; letter-spacing: 0.5px; line-height: 1.6; font-size: 0.9rem;">
                                     The Movie Recommendation System is built using machine learning techniques to suggest relevant movies based on a selected title. It applies content-based filtering by extracting features like genres and descriptions, then uses TF-IDF vectorization to convert text into numerical format. Cosine similarity is calculated to measure the closeness between movies, allowing the system to recommend top matches. The model is trained and evaluated using Python libraries like Scikit-learn and Pandas. Key ML concepts applied include text processing, vectorization, feature extraction, and similarity scoring, making it a practical application of machine learning in recommendation systems.
                                 </h5>
                                 <div class="d-flex gap-2 mt-3">
